Fixed bug with responsive elements on mobile

--- a/projects.css
+++ b/projects.css
@@ -246,11 +246,11 @@ footer {
   }
 
   .nav_about {
-    margin-right: 10px;
+    margin-right: 30px;
   }
 
   footer {
-    margin-right: 15px;
+    margin-right: 30px;
   }
 
 }
